safemlx-sys/src/bindings.rs

extern "C" {
    pub fn mlx_conv3d(
        res: *mut mlx_array,
        input: mlx_array,
        weight: mlx_array,
        stride_0: ::std::os::raw::c_int,
        stride_1: ::std::os::raw::c_int,
        stride_2: ::std::os::raw::c_int,
        padding_0: ::std::os::raw::c_int,
        padding_1: ::std::os::raw::c_int,
        padding_2: ::std::os::raw::c_int,
        dilation_0: ::std::os::raw::c_int,
        dilation_1: ::std::os::raw::c_int,
        dilation_2: ::std::os::raw::c_int,
        groups: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_conv_general(
        res: *mut mlx_array,
        input: mlx_array,
        weight: mlx_array,
        stride: *const ::std::os::raw::c_int,
        stride_num: usize,
        padding_lo: *const ::std::os::raw::c_int,
        padding_lo_num: usize,
        padding_hi: *const ::std::os::raw::c_int,
        padding_hi_num: usize,
        kernel_dilation: *const ::std::os::raw::c_int,
        kernel_dilation_num: usize,
        input_dilation: *const ::std::os::raw::c_int,
        input_dilation_num: usize,
        groups: ::std::os::raw::c_int,
        flip: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_conv_transpose1d(
        res: *mut mlx_array,
        input: mlx_array,
        weight: mlx_array,
        stride: ::std::os::raw::c_int,
        padding: ::std::os::raw::c_int,
        dilation: ::std::os::raw::c_int,
        output_padding: ::std::os::raw::c_int,
        groups: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_conv_transpose2d(
        res: *mut mlx_array,
        input: mlx_array,
        weight: mlx_array,
        stride_0: ::std::os::raw::c_int,
        stride_1: ::std::os::raw::c_int,
        padding_0: ::std::os::raw::c_int,
        padding_1: ::std::os::raw::c_int,
        dilation_0: ::std::os::raw::c_int,
        dilation_1: ::std::os::raw::c_int,
        output_padding_0: ::std::os::raw::c_int,
        output_padding_1: ::std::os::raw::c_int,
        groups: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_conv_transpose3d(
        res: *mut mlx_array,
        input: mlx_array,
        weight: mlx_array,
        stride_0: ::std::os::raw::c_int,
        stride_1: ::std::os::raw::c_int,
        stride_2: ::std::os::raw::c_int,
        padding_0: ::std::os::raw::c_int,
        padding_1: ::std::os::raw::c_int,
        padding_2: ::std::os::raw::c_int,
        dilation_0: ::std::os::raw::c_int,
        dilation_1: ::std::os::raw::c_int,
        dilation_2: ::std::os::raw::c_int,
        output_padding_0: ::std::os::raw::c_int,
        output_padding_1: ::std::os::raw::c_int,
        output_padding_2: ::std::os::raw::c_int,
        groups: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_copy(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_cos(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_cosh(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_cummax(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        reverse: bool,
        inclusive: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_cummin(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        reverse: bool,
        inclusive: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_cumprod(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        reverse: bool,
        inclusive: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_cumsum(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        reverse: bool,
        inclusive: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_degrees(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_depends(
        res: *mut mlx_vector_array,
        inputs: mlx_vector_array,
        dependencies: mlx_vector_array,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_dequantize(
        res: *mut mlx_array,
        w: mlx_array,
        scales: mlx_array,
        biases: mlx_array,
        group_size: mlx_optional_int,
        bits: mlx_optional_int,
        mode: *const ::std::os::raw::c_char,
        global_scale: mlx_array,
        dtype: mlx_optional_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_diag(
        res: *mut mlx_array,
        a: mlx_array,
        k: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_diagonal(
        res: *mut mlx_array,
        a: mlx_array,
        offset: ::std::os::raw::c_int,
        axis1: ::std::os::raw::c_int,
        axis2: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_divide(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_divmod(
        res: *mut mlx_vector_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_einsum(
        res: *mut mlx_array,
        subscripts: *const ::std::os::raw::c_char,
        operands: mlx_vector_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_equal(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_erf(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_erfinv(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_exp(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_expand_dims_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_expand_dims(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_expm1(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_eye(
        res: *mut mlx_array,
        n: ::std::os::raw::c_int,
        m: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_flatten(
        res: *mut mlx_array,
        a: mlx_array,
        start_axis: ::std::os::raw::c_int,
        end_axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_floor(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_floor_divide(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_from_fp8(
        res: *mut mlx_array,
        x: mlx_array,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_full(
        res: *mut mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        vals: mlx_array,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_full_like(
        res: *mut mlx_array,
        a: mlx_array,
        vals: mlx_array,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_gather(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_vector_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        slice_sizes: *const ::std::os::raw::c_int,
        slice_sizes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_gather_single(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        axis: ::std::os::raw::c_int,
        slice_sizes: *const ::std::os::raw::c_int,
        slice_sizes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_gather_mm(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        lhs_indices: mlx_array,
        rhs_indices: mlx_array,
        sorted_indices: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_mxfp4_gather_control_bytes(output: *mut usize) -> bool;
    pub fn mlx_affine_grouped_control_bytes(selected: bool, output: *mut usize) -> bool;
    pub fn mlx_gather_qmm(
        res: *mut mlx_array,
        x: mlx_array,
        w: mlx_array,
        scales: mlx_array,
        biases: mlx_array,
        lhs_indices: mlx_array,
        rhs_indices: mlx_array,
        transpose: bool,
        group_size: mlx_optional_int,
        bits: mlx_optional_int,
        mode: *const ::std::os::raw::c_char,
        sorted_indices: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_greater(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_greater_equal(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_hadamard_transform(
        res: *mut mlx_array,
        a: mlx_array,
        scale: mlx_optional_float,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_hamming(
        res: *mut mlx_array,
        M: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_hanning(
        res: *mut mlx_array,
        M: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_identity(
        res: *mut mlx_array,
        n: ::std::os::raw::c_int,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_imag(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_inner(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_isclose(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        rtol: f64,
        atol: f64,
        equal_nan: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_isfinite(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_isinf(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_isnan(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_isneginf(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_isposinf(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
